[tool.poetry]
name = "paymentify"
version = "0.1.0"
description = "A super cool payment application"
authors = ["Christian Barra <me@christianbarra.com>"]

[tool.poetry.dependencies]
python = "^3.7"
falcon = "^2.0.0"
pydantic = "^1.6"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
