[tool.poetry]
name = "paymentify"
version = "0.1.0"
description = "A super cool payment application"
authors = ["Christian Barra <me@christianbarra.com>"]

[tool.poetry.dependencies]
python = "^3.7"
falcon = "^2.0.0"
gunicorn = "^20.0.4"
stripe = "^2.48.0"
jsonschema = "^3.2.0"
dynaconf = "^3.0.0"

[tool.poetry.dev-dependencies]
isort = {extras = ["pyproject"], version = "^5.0.9"}
black = "^19.10b0"
flake8 = "^3.8.3"
pre-commit = "^2.6.0"
pytest = "^5.4.3"
pytest-sugar = "^0.9.4"
hypothesis = "^5.19.3"
pytest-mock = "^3.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
